--- a/AccessReel/AccessReel/MainPage.xaml
+++ b/AccessReel/AccessReel/MainPage.xaml
@@ -94,16 +94,20 @@
                                             <RowDefinition Height="*" />
                                         </Grid.RowDefinitions>
                                         <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="*"/>
-                                            <ColumnDefinition Width="*"/>
+                                            <ColumnDefinition Width="70"/>
+                                            <ColumnDefinition Width="70"/>
                                         </Grid.ColumnDefinitions>
                                         <!-- I can't get the text to be in the centre of the circle-->
                                             <!--Critic-->
-                                            <Ellipse WidthRequest="60" HeightRequest="60" Fill="#c3184a" Stroke="#f61e5b" StrokeThickness="15"
-                                                     HorizontalOptions="Center" VerticalOptions="Center" />
-                                            <Label Text="9.0" FontSize="Medium" TextColor="White" FontAttributes="Bold"
-                                                   HorizontalTextAlignment="Center" VerticalTextAlignment="Center" 
-                                                   HorizontalOptions="Center" VerticalOptions="Center" />
+                                            <AbsoluteLayout>
+                                                <Ellipse WidthRequest="60" HeightRequest="60" Fill="#c3184a" Stroke="#f61e5b" StrokeThickness="15"
+                                                         HorizontalOptions="Center" VerticalOptions="Center" />
+                                                <Label Text="{Binding ReviewScore}" FontSize="Medium" TextColor="White" FontAttributes="Bold"
+                                                       HorizontalTextAlignment="Center" VerticalTextAlignment="Center" 
+                                                       HorizontalOptions="Center" VerticalOptions="Center" 
+                                                       AbsoluteLayout.LayoutBounds="15,15"/>
+                                            </AbsoluteLayout>
+                                            
                                             <Label Grid.Row="1"  Text="CRITIC" FontAttributes="Bold" TextColor="White" HorizontalTextAlignment="Center"/>
                                             <!--Member-->
                                             <Label Grid.Column="1" Grid.Row="1" Text="MEMBERS" AbsoluteLayout.LayoutBounds="0,60" FontAttributes="Bold" TextColor="White"
@@ -111,7 +115,7 @@
                                             <Ellipse Grid.Column="1" WidthRequest="60" HeightRequest="60" Fill="#2d99a1" Stroke="#00d1e4" StrokeThickness="15" 
                                                      IsVisible="{Binding MemberReviewScore, Converter={StaticResource NotEmptyStringConverter}}"/>
                                             <Label Grid.Column="1" Text="{Binding MemberReviewScore}" FontSize="Medium" TextColor="Beige" FontAttributes="Bold" 
-                                                   HorizontalTextAlignment="Center" HorizontalOptions="Center" VerticalOptions="Center" VerticalTextAlignment="Center"
+                                                   HorizontalTextAlignment="Center" HorizontalOptions="Start" VerticalOptions="Center" VerticalTextAlignment="Center"
                                                    IsVisible="{Binding MemberReviewScore, Converter={StaticResource NotEmptyStringConverter}}"/>
                                     </Grid>
                                     <!--<VerticalStackLayout>
