--- a/AccessReel/AccessReel/FilmPage.xaml
+++ b/AccessReel/AccessReel/FilmPage.xaml
@@ -70,7 +70,7 @@
                 </VerticalStackLayout>
                 <Label Grid.Column="1" Grid.Row="1" x:Name="LblDesc" Text="{Binding Description}" Margin="50,10,0,0"/>
 
-	<!-- User Rating Stuff Goes Here-->
+	        <!-- User Rating -->
                 <VerticalStackLayout Grid.Row="2" Grid.ColumnSpan="2">
                     <HorizontalStackLayout>
                         <AbsoluteLayout Margin="5">
@@ -105,7 +105,6 @@
                 </VerticalStackLayout>
             </Grid>
             
-            <!-- User Rating Stuff Goes Here-->
 
             <!-- Film Review -->
             <Grid x:Name="FilmReview" IsVisible="False">
