--- a/AccessReel/AccessReel/FlyoutMenu.xaml
+++ b/AccessReel/AccessReel/FlyoutMenu.xaml
@@ -22,6 +22,8 @@
                 <Button x:Name="BtnInterviews" Text="Interviews" Clicked="BtnInterviews_Clicked" CornerRadius="0" BorderColor="LightGray" BorderWidth="1"/>
                 <Label Text="Placeholders"/>
                 <Button x:Name="BtnFilmPage" Text="Film Page" Clicked="BtnFilmPage_Clicked" />
+                <Button x:Name="BtnLogin" Text="Login" Clicked="BtnLogin_Clicked" />
+                <Button x:Name="BtnRegister" Text="Register" Clicked="BtnRegister_Clicked" />
             </StackLayout>
         </ContentPage>
     </FlyoutPage.Flyout>    
