--- a/AccessReel/AccessReel/FlyoutMenu.xaml
+++ b/AccessReel/AccessReel/FlyoutMenu.xaml
@@ -20,8 +20,7 @@
                 <Button x:Name="BtnFilmsPage" Text="Films" Clicked="BtnFilmsPage_Clicked" CornerRadius="0" BorderColor="LightGray" BorderWidth="1"/>
                 <Button x:Name="BtnTrailers" Text="Trailers" Clicked="BtnTrailers_Clicked" CornerRadius="0"  BorderColor="LightGray" BorderWidth="1"/>
                 <Button x:Name="BtnInterviews" Text="Interviews" Clicked="BtnInterviews_Clicked" CornerRadius="0" BorderColor="LightGray" BorderWidth="1"/>
-                <Label Text="Placeholders"/>
-                <Button x:Name="BtnFilmPage" Text="Film Page" Clicked="BtnFilmPage_Clicked" />
+                <Label/> <!-- Used For Visual Seperation Between Buttons -->
                 <Button x:Name="BtnLogin" Text="Login" Clicked="BtnLogin_Clicked" />
                 <Button x:Name="BtnRegister" Text="Register" Clicked="BtnRegister_Clicked" />
             </StackLayout>
