--- a/AccessReel/AccessReel/FilmPage.xaml
+++ b/AccessReel/AccessReel/FilmPage.xaml
@@ -25,7 +25,7 @@
                 <VerticalStackLayout> <!-- Critic review score -->
                     <AbsoluteLayout Grid.Column="2" Margin="10" x:Name="AbsLayoutReviewScore" HorizontalOptions="End">
                         <Ellipse WidthRequest="60" HeightRequest="60" Fill="#c3184a" Stroke="#f61e5b" StrokeThickness="15" />
-                        <Label Text="{Binding ReviewScore}" TextColor="White" AbsoluteLayout.LayoutBounds="{Binding ReviewScore, Converter={StaticResource ReviewScoreToAbsLayoutConverter}}" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" />
+                        <Label Text="{Binding ReviewScore}" TextColor="White" AbsoluteLayout.LayoutBounds="0.5,0.5" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" />
                     </AbsoluteLayout>
                     <Label Text="Critic" FontAttributes="Bold" HorizontalTextAlignment="Center"/>
                 </VerticalStackLayout>
@@ -33,7 +33,7 @@
                     <AbsoluteLayout Grid.Column="2" Margin="10" x:Name="AbsLayoutMemberScore" HorizontalOptions="End" 
                             IsVisible="{Binding MemberReviewScore, Converter={StaticResource NotEmptyStringConverter}}">
                         <Ellipse WidthRequest="60" HeightRequest="60" Fill="#2d99a1" Stroke="#00d1e4" StrokeThickness="15" />
-                        <Label Text="{Binding MemberReviewScore}" TextColor="White" AbsoluteLayout.LayoutBounds="{Binding MemberReviewScore, Converter={StaticResource ReviewScoreToAbsLayoutConverter}}" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" />
+                        <Label Text="{Binding MemberReviewScore}" TextColor="White" AbsoluteLayout.LayoutBounds="0.5,0.5" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" />
                     </AbsoluteLayout>
                     <Label Text="Members" FontAttributes="Bold" HorizontalTextAlignment="Center"
                     IsVisible="{Binding MemberReviewScore, Converter={StaticResource NotEmptyStringConverter}}"/>
@@ -50,7 +50,7 @@
             </HorizontalStackLayout>
             
             <!-- Film Overview -->
-            <Grid x:Name="FilmOverview" IsVisible="True" Margin="30">
+            <Grid x:Name="FilmOverview" IsVisible="True" Margin="30" HorizontalOptions="Center">
                 <Grid.RowDefinitions>
                     <RowDefinition/>
                     <RowDefinition/>
