--- a/AccessReel/AccessReel/FilmPage.xaml
+++ b/AccessReel/AccessReel/FilmPage.xaml
@@ -67,7 +67,6 @@
                     <Image x:Name="ImagePoster" />
                     <Button Text="Follow +" TextColor="White" BackgroundColor="#00d0e5" HorizontalOptions="Center" x:Name="FollowBtn" Clicked="FollowBtn_Clicked" />
                 </VerticalStackLayout>
-                <Label Grid.Column="1" Grid.Row="1" x:Name="LblDesc" Text="{Binding Description}" Margin="50,10,0,0"/>
 
 	        <!-- User Rating -->
                 <VerticalStackLayout Grid.Row="2" Grid.ColumnSpan="2">
@@ -86,7 +85,9 @@
                 </VerticalStackLayout>
 
 	        <!-- Film Details-->
-                <VerticalStackLayout Grid.Column="2" Grid.Row="2" Margin="40,0,00,50" Grid.ColumnSpan="2">
+                <VerticalStackLayout Grid.Column="2" Grid.Row="1" Margin="50,10,0,0" Grid.ColumnSpan="2" BackgroundColor="#f9f9f9">
+                    <Label x:Name="LblDesc" Text="{Binding Description}" Padding="10" Margin="0,10,0,0"/>
+                    
                     <StackLayout x:Name="GenreStackLayout" Padding="10">
                         <Label Text="Genre"/>
                         <!-- Genre items will be added by code -->
