--- a/AccessReel/AccessReel/FilmReviewContent.xaml
+++ b/AccessReel/AccessReel/FilmReviewContent.xaml
@@ -45,7 +45,7 @@
 
                 <AbsoluteLayout Margin="20" x:Name="AbsLayoutReviewScore2" HorizontalOptions="EndAndExpand">
                     <Ellipse WidthRequest="60" HeightRequest="60" Fill="#c3184a" Stroke="#f61e5b" StrokeThickness="15" />
-                    <Label Text="{Binding ReviewScore}" AbsoluteLayout.LayoutBounds="0.5,0.5" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" TextColor="black"/>
+                    <Label x:Name="ReviewScoreLabel" AbsoluteLayout.LayoutBounds="0.5,0.5" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" TextColor="White" FontAttributes="Bold"/>
                 </AbsoluteLayout>
             </HorizontalStackLayout>
         </Grid>
