--- a/AccessReel/AccessReel/FilmPage.xaml
+++ b/AccessReel/AccessReel/FilmPage.xaml
@@ -21,42 +21,42 @@
 
             <!-- Title/Score -->
             <HorizontalStackLayout HorizontalOptions="Center">
-                <Label x:Name="LblTitle" Text="{Binding Title}" HorizontalOptions="Start" FontSize="Title" VerticalOptions="Center" WidthRequest="400"/>
+                <Label x:Name="LblTitle" Text="{Binding Title}" HorizontalOptions="StartAndExpand" FontSize="Title" VerticalOptions="Center"/>
                 <VerticalStackLayout> <!-- Critic review score -->
-                    <AbsoluteLayout Grid.Column="2" Margin="10" x:Name="AbsLayoutReviewScore" HorizontalOptions="End">
+                    <AbsoluteLayout Grid.Column="2" x:Name="AbsLayoutReviewScore" HorizontalOptions="End" Margin="150,20,0,0">
                         <Ellipse WidthRequest="60" HeightRequest="60" Fill="#c3184a" Stroke="#f61e5b" StrokeThickness="15" />
                         <Label Text="{Binding ReviewScore}" TextColor="White" AbsoluteLayout.LayoutBounds="0.5,0.5" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" />
                     </AbsoluteLayout>
-                    <Label Text="Critic" FontAttributes="Bold" HorizontalTextAlignment="Center"/>
+                    <Label Text="CRITIC" FontAttributes="Bold" HorizontalTextAlignment="Center" Margin="145,0,0,0"/>
                 </VerticalStackLayout>
                 <VerticalStackLayout> <!-- Member review score -->
-                    <AbsoluteLayout Grid.Column="2" Margin="10" x:Name="AbsLayoutMemberScore" HorizontalOptions="End" 
+                    <AbsoluteLayout Grid.Column="2" x:Name="AbsLayoutMemberScore" HorizontalOptions="End" Margin="0,20,0,0" 
                             IsVisible="{Binding MemberReviewScore, Converter={StaticResource NotEmptyStringConverter}}">
                         <Ellipse WidthRequest="60" HeightRequest="60" Fill="#2d99a1" Stroke="#00d1e4" StrokeThickness="15" />
                         <Label Text="{Binding MemberReviewScore}" TextColor="White" AbsoluteLayout.LayoutBounds="0.5,0.5" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" />
                     </AbsoluteLayout>
-                    <Label Text="Members" FontAttributes="Bold" HorizontalTextAlignment="Center"
+                    <Label Text="MEMBERS" FontAttributes="Bold" HorizontalTextAlignment="Center"
                     IsVisible="{Binding MemberReviewScore, Converter={StaticResource NotEmptyStringConverter}}"/>
 
                 </VerticalStackLayout>
             </HorizontalStackLayout>    
 	
             <!-- Buttons to switch views -->
-            <HorizontalStackLayout HorizontalOptions="CenterAndExpand" >
-                <Button x:Name="BtnOverview" Text="{Binding Title}" Clicked="BtnOverview_Clicked" WidthRequest="300"/>
-                <Button x:Name="BtnReviews" Text="Review" Clicked="BtnReview_Clicked" WidthRequest="300"/>
+            <HorizontalStackLayout HorizontalOptions="CenterAndExpand" Margin="10">
+                <Button x:Name="BtnOverview" Text="Overview" Clicked="BtnOverview_Clicked" Margin="0,0,10,0"/>
+                <Button x:Name="BtnReviews" Text="Review" Clicked="BtnReview_Clicked"/>
             </HorizontalStackLayout>
             
             <!-- Film Overview -->
             <Grid x:Name="FilmOverview" IsVisible="True" Margin="30" HorizontalOptions="Center">
                 <Grid.RowDefinitions>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                    <RowDefinition/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="200"/>
-                    <ColumnDefinition Width="800"/>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="8*"/>
                 </Grid.ColumnDefinitions>
 
 				<StackLayout Grid.Column="2" Grid.Row="0" >
@@ -64,8 +64,8 @@
                     <Label x:Name ="USreleaseDate" Text="In Theaters (USA):  " HorizontalTextAlignment="End" TextColor="#a2645f"/>
                 </StackLayout>
                 <VerticalStackLayout Grid.Column="0" Grid.Row="1">
-                    <Image x:Name="ImagePoster" />
-                    <Button Text="Follow +" TextColor="White" BackgroundColor="#00d0e5" HorizontalOptions="Center" x:Name="FollowBtn" Clicked="FollowBtn_Clicked" />
+                    <Image x:Name="ImagePoster" WidthRequest="150" Margin="0,10,0,0"/>
+                    <!-- <Button Text="Follow +" TextColor="White" BackgroundColor="#00d0e5" HorizontalOptions="Center" x:Name="FollowBtn" Clicked="FollowBtn_Clicked" /> -->
                 </VerticalStackLayout>
 
 	        <!-- User Rating -->
