--- a/AccessReel/AccessReel/ListPage.xaml
+++ b/AccessReel/AccessReel/ListPage.xaml
@@ -12,18 +12,21 @@
             <!-- Template for movies articles -->
             <DataTemplate x:Name="DTMovieArticle" x:Key="templateMA">
                 <Grid HorizontalOptions="CenterAndExpand" Padding="5">
+                    <Grid.RowDefinitions>
+                        <RowDefinition />
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="300"/>
-                        <ColumnDefinition Width="500"/>
-                        <ColumnDefinition Width="120"/>
+                        <ColumnDefinition Width="250"/>
+                        <ColumnDefinition Width="100"/>
                     </Grid.ColumnDefinitions>
-                    <Image Grid.Column="0" Margin="5" Source="{Binding Image}">
+                    <Image Grid.Row="0" Grid.Column="0" Margin="5" Source="{Binding Image}">
                         <Image.GestureRecognizers>
                             <TapGestureRecognizer Tapped="ItemTapped"/>
                         </Image.GestureRecognizers>
                     </Image>
 
-                    <VerticalStackLayout Grid.Column="1" Margin="5">
+                    <VerticalStackLayout Grid.Row="1" Grid.Column="0" Margin="5" Grid.ColumnSpan="2">
                         <Label Text="{Binding Title}" FontAttributes="Bold" FontSize="Medium" Margin="5">
                             <Label.GestureRecognizers>
                                 <TapGestureRecognizer Tapped="ItemTapped"/>
@@ -39,7 +42,7 @@
                             <Label Text="{Binding FormattedDate}" FontSize="Caption" TextColor="DarkGray" Margin="5"/>
                         </HorizontalStackLayout>
                     </VerticalStackLayout>
-                    <AbsoluteLayout Grid.Column="2" Margin="10" x:Name="AbsLayoutReviewScore">
+                    <AbsoluteLayout Grid.Row="0" Grid.Column="2" Margin="5,35,0,0" x:Name="AbsLayoutReviewScore">
                         <Ellipse WidthRequest="60" HeightRequest="60" Fill="#c3184a" Stroke="#f61e5b" StrokeThickness="15" IsVisible="{Binding ReviewScore, Converter={StaticResource NotEmptyStringConverters}}"/>
                         <Label Text="{Binding ReviewScore}" AbsoluteLayout.LayoutBounds="{Binding ReviewScore, Converter={StaticResource ReviewScoreToAbsLayoutConverter}}" 
                                AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" 
@@ -49,18 +52,20 @@
             </DataTemplate>
             <!-- Template for regular articles -->
             <DataTemplate x:Name="DTArticle" x:Key="templateArticle">
-                <Grid HorizontalOptions="CenterAndExpand" Padding="5">
+                <Grid HorizontalOptions="CenterAndExpand" Padding="5" >
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="300"/>
-                        <ColumnDefinition Width="500"/>
-                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="358"/>
                     </Grid.ColumnDefinitions>
-                    <Image Grid.Column="0" Margin="5" Source="{Binding Image}">
+                    <Image Grid.Row="0" Grid.Column="0" Margin="5" Source="{Binding Image}" >
                         <Image.GestureRecognizers>
                             <TapGestureRecognizer Tapped="ItemTapped"/>
                         </Image.GestureRecognizers>
                     </Image>
-                    <VerticalStackLayout Grid.Column="1" Margin="5">
+                    <VerticalStackLayout Grid.Row="1" Grid.Column="0"  Margin="5">
                         <Label Text="{Binding Title}" FontAttributes="Bold" FontSize="Medium" Margin="5">
                             <Label.GestureRecognizers>
                                 <TapGestureRecognizer Tapped="ItemTapped"/>
@@ -97,7 +102,7 @@
                         </Label.GestureRecognizers>
                     </Label>
                 </AbsoluteLayout>
-                <Picker x:Name="Sorter" SelectedIndexChanged="Sorter_SelectedIndexChanged" SelectedIndex="0" HorizontalOptions="Center" WidthRequest="400" BackgroundColor="LightGray" SelectedItem="0">
+                <Picker x:Name="Sorter" SelectedIndexChanged="Sorter_SelectedIndexChanged" SelectedIndex="0" HorizontalOptions="Center" WidthRequest="300" BackgroundColor="LightGray" SelectedItem="0">
                     <Picker.Shadow>
                         <Shadow Brush="Black" Offset="10,10" Radius="20" Opacity="0"/>
                     </Picker.Shadow>
